tests/ui/typeck/self-constructor-type-error-56199.stderr
error: the `Self` constructor can only be used with tuple or unit structs
  --> $DIR/self-constructor-type-error-56199.rs:7:17
   |
LL |         let _ = Self;
   |                 ^^^^
   |
   = help: did you mean to use one of the enum's variants?

error: the `Self` constructor can only be used with tuple or unit structs
  --> $DIR/self-constructor-type-error-56199.rs:9:17
   |
LL |         let _ = Self();
   |                 ^^^^^^
   |
   = help: did you mean to use one of the enum's variants?

error: the `Self` constructor can only be used with tuple or unit structs
  --> $DIR/self-constructor-type-error-56199.rs:16:17
   |
LL |         let _ = Self;
   |                 ^^^^ help: use curly brackets: `Self { /* fields */ }`

error: the `Self` constructor can only be used with tuple or unit structs
  --> $DIR/self-constructor-type-error-56199.rs:18:17
   |
LL |         let _ = Self();
   |                 ^^^^^^ help: use curly brackets: `Self { /* fields */ }`

error: aborting due to 4 previous errors

